// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownHeading should render a h1 tag 1`] = `
<h1
  className="jsx-1076320130"
>
  test text
</h1>
`;

exports[`MarkdownHeading should render a h2 tag 1`] = `
<h2
  className="jsx-1076320130"
>
  test text
</h2>
`;

exports[`MarkdownHeading should render a h3 tag 1`] = `
<h3
  className="jsx-1076320130"
>
  test text
</h3>
`;

exports[`MarkdownHeading should render a h4 tag 1`] = `
<h4
  className="jsx-1076320130"
>
  test text
</h4>
`;

exports[`MarkdownHeading should render a h5 tag 1`] = `
<h5
  className="jsx-1076320130"
>
  test text
</h5>
`;

exports[`MarkdownHeading should render a h6 tag 1`] = `
<h6
  className="jsx-1076320130"
>
  test text
</h6>
`;
